--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1 id="path"></h1>
+
     <script>
-        document.getElementById('path').innerHTML = window.location.pathname
+        const path = window.location.href.split("/")
+        const Text = path[path.length - 1].split('?')
+        document.getElementById('path').innerHTML = Text[Text.length - 1]
     </script>
 </body>
 
